Update REI Display Serializer